# osu2vec

./: LICENSE  README.md  TODO.md  USAGE.md  main.py  pyproject.toml
data/: map1.osu  map7.osu
docs/: Architecture.drawio  data.md  parser.md
examples/: model_example.py
src/osu2vec/: data.py  model.py  parser.py
